++++
News
++++

.. contents:: Contents:
   :backlinks: none

.. _start:

SQLObject (trunk)
=================

SQLObject 0.13.0
================

Released 11 Aug 2010.

Features & Interface
--------------------

* SQLObject instances that don't have a per-instance connection can be
  pickled and unpickled.

* Validators became stricter: StringCol and UnicodeCol now accept only str,
  unicode or an instance of a class that implements __unicode__ (but not
  __str__ because every object has a __str__ method); BoolCol accepts only
  bool or int or an instance of a class that implements __nonzero__; IntCol
  accepts int, long or an instance of a class that implements __int__ or
  __long__; FloatCol accepts float, int, long or an instance of a class
  that implements __float__, __int__ or __long__.

* Added a connection class for rdbhost.com (commercial Postgres-over-Web
  service).

Small Features
--------------

* Added TimedeltaCol; currently it's only implemented on PostgreSQL as an
  INTERVAL type.

* Do not pollute the base sqlmeta class to allow Style to set idName. In
  the case of inherited idName inherited value takes precedence; to allow
  Style to set idName reset inherited idName to None.

* Better handling of circular dependencies in sqlobject-admin -
  do not include the class in the list of other classes.

* Renamed db_encoding to dbEncoding in UnicodeStringValidator.

* A new parameter 'sslmode' was added to PostgresConnection.

* Removed SQLValidator - its attemptConvert was never called because in
  FormEncode it's named attempt_convert.

SQLObject 0.12.5
================

* 'backend' parameter was renamed to 'driver'. To preserve backward
  compatibility 'backend' is recognized and will be recognized for some time.

SQLObject 0.12.4
================

Released 5 May 2010.

* Bugs were fixed in calling from_python().

* A bugfix was ported from `SQLObject 0.11.6`_.

SQLObject 0.12.3
================

Released 11 Apr 2010.
